tests/fail/feat_chrono/ch_nightly/unknown.stderr
error: Unknown chrono format O. See https://docs.rs/chrono/^0/chrono/format/strftime/ for a full list
 --> $DIR/unknown.rs:2:30
  |
2 |     sscanf::scanf!("hi", "{:%O}", DateTime);
  |                              ^
